--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "node-minify": "0.8.x"
   },
   "devDependencies": {
+    "mocha": "1.17.x",
+    "should": "3.1.x",
+    "istanbul": "0.2.x"
   },
   "engine": "node >= 0.10.x"
 }
