--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "mocha": "1.17.x",
     "should": "3.1.x",
-    "istanbul": "0.2.x"
+    "istanbul": "0.2.x",
+    "jshint": "2.4.x"
   },
   "engine": "node >= 0.10.x"
 }
