Whoops, broke build, fixing

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "async": "0.2.x",
     "commander": "2.0.x",
-    "node-minify": "0.8.x"
+    "node-minify": "0.8.x",
+    "colors": "0.6.x"
   },
   "devDependencies": {
     "mocha": "1.17.x",
