--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "istanbul": "0.2.x",
     "jshint": "2.4.x"
   },
+  "scripts": {
+    "test": "mocha -R spec -u tdd --recursive test/unit/"
+  },
   "engine": "node >= 0.10.x"
 }
