--- a/settings_template.json
+++ b/settings_template.json
@@ -1,5 +1,5 @@
 {
 	"path_to_nirodha": "/Users/bjameson/Development/Code/Nirodha/",
-	"log_level" : "6",
-	"port": "80"
+	"log_level" : 6,
+	"port": 80
 }
