--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "commander": "2.0.x",
     "node-minify": "0.8.x",
     "colors": "0.6.x",
-    "jslogging": "0.1.x"
+    "jslogging": "0.1.x",
+    "underscore": "1.7.x"
   },
   "devDependencies": {
     "mocha": "1.17.x",
