--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
     "colors": "0.6.x",
     "jslogging": "0.1.x",
     "underscore": "1.7.x",
-    "watch": "0.11.x"
+    "watch": "0.11.x",
+    "coveralls": "2.x.x"
   },
   "devDependencies": {
     "mocha": "1.17.x",
     "should": "3.1.x",
     "istanbul": "0.2.x",
-    "jshint": "2.4.x"
+    "jshint": "2.4.x",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
-    "test": "mocha -R spec -u tdd --recursive test/"
+    "test": "mocha -R spec -u tdd --recursive test/",
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -u tdd -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "engine": "node >= 0.10.x"
 }
