--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nirohda",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Website deployment software",
   "homepage": "http://www.jamesonnetworks.com",
   "author": "Brent Jameson <brent@jamesonnetworks.com>",
@@ -15,10 +15,10 @@
     "coveralls": "2.x.x"
   },
   "devDependencies": {
-    "mocha": "1.17.x",
-    "should": "3.1.x",
-    "istanbul": "0.2.x",
-    "jshint": "2.4.x",
+    "mocha": "1.x.x",
+    "should": "4.x.x",
+    "istanbul": "2.x.x",
+    "jshint": "2.x.x",
     "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
