--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nirohda",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Website deployment software",
   "homepage": "http://www.jamesonnetworks.com",
   "author": "Brent Jameson <brent@jamesonnetworks.com>",
@@ -17,7 +17,7 @@
   "devDependencies": {
     "mocha": "1.x.x",
     "should": "4.x.x",
-    "istanbul": "2.x.x",
+    "istanbul": "0.2.x",
     "jshint": "2.x.x",
     "mocha-lcov-reporter": "0.0.1"
   },
