--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "codeclimate-test-reporter": "0.x.x"
   },
   "scripts": {
-    "test": "mocha -R spec -u tdd --recursive test/",
+    "test": "mocha -R progress -u tdd --recursive test/",
     "testc": "istanbul cover ./node_modules/mocha/bin/_mocha -- -u tdd -R spec",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -u tdd -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && cat ./coverage/lcov.info | ./node_modules/codeclimate-test-reporter/bin/codeclimate.js && rm -rf ./coverage"
   },
